--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <a href="https://dontstarve.fandom.com/wiki/Don%27t_Starve_Together" class="text-xl hover:underline">Wiki</a>
       <a href="goals.html" class="text-xl hover:underline">Goals</a>
       <a href="accomplishments.html" class="text-xl hover:underline">Accomplishments</a>
+      <a href="beefalo-taming.html" class="text-xl font-bold text-[#e0d8c3] hover:text-[#ffcc00]">Beefalo Taming</a>
     </nav>
   </div>
   <script src="script.js"></script>
