Added Beefalo Taming

--- a/beefalo-taming.html
+++ b/beefalo-taming.html
@@ -7,14 +7,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body style="background: url('https://i.imgur.com/3r3Z9oS.jpg') no-repeat center center fixed;">
   <nav class="parchment py-4">
     <div class="container mx-auto flex justify-center space-x-6">
-      <a href="index.html" class="text-xl hover:underline">Home</a>
-      <a href="https://steamcommunity.com/sharedfiles/filedetails?id=3435443161" class="text-xl hover:underline">Mods</a>
-      <a href="https://dontstarve.fandom.com/wiki/Don%27t_Starve_Together" class="text-xl hover:underline">Wiki</a>
-      <a href="goals.html" class="text-xl hover:underline">Goals</a>
-      <a href="accomplishments.html" class="text-xl hover:underline">Accomplishments</a>
+      <a href="index.html" class="text-xl font-bold text-[#e0d8c3] hover:text-[#ffcc00]">Home</a>
+      <a href="mods.html" class="text-xl font-bold text-[#e0d8c3] hover:text-[#ffcc00]">Mods</a>
+      <a href="wiki.html" class="text-xl font-bold text-[#e0d8c3] hover:text-[#ffcc00]">Wiki</a>
+      <a href="goals.html" class="text-xl font-bold text-[#e0d8c3] hover:text-[#ffcc00]">Goals</a>
+      <a href="accomplishments.html" class="text-xl font-bold text-[#e0d8c3] hover:text-[#ffcc00]">Accomplishments</a>
       <a href="beefalo-taming.html" class="text-xl font-bold text-[#e0d8c3] hover:text-[#ffcc00]">Beefalo Taming</a>
     </div>
   </nav>
@@ -33,7 +33,9 @@
       <p>Plus, their manure fuels fire pits year-round! Taming takes 15–20 days but can be done alongside regular gameplay.</p>
     </div>
 
-    <div class="parchment p-6 mb-8 fade-in">
+   指標
+
+System: <div class="parchment p-6 mb-8 fade-in">
       <h2 class="text-2xl font-bold mb-4">How to Tame a Beefalo</h2>
       <p class="mb-4">Follow these steps to tame your Beefalo efficiently:</p>
       <ol class="list-decimal list-inside mb-4">
