Added Beefalo Taming

--- a/beefalo-taming.html
+++ b/beefalo-taming.html
@@ -3,78 +3,82 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vybyn's Guide to Don't Starve Together</title>
+  <title>Accomplishments - DST Community Hub</title>
+  <meta name="description" content="Achievements of our Don't Starve Together community.">
+  <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body style="background: url('https://i.imgur.com/3r3Z9oS.jpg') no-repeat center center fixed;">
-  <nav class="parchment py-4">
-    <div class="container mx-auto flex justify-center space-x-6">
-      <a href="index.html" class="text-xl font-bold text-[#e0d8c3] hover:text-[#ffcc00]">Home</a>
-      <a href="mods.html" class="text-xl font-bold text-[#e0d8c3] hover:text-[#ffcc00]">Mods</a>
-      <a href="wiki.html" class="text-xl font-bold text-[#e0d8c3] hover:text-[#ffcc00]">Wiki</a>
-      <a href="goals.html" class="text-xl font-bold text-[#e0d8c3] hover:text-[#ffcc00]">Goals</a>
-      <a href="accomplishments.html" class="text-xl font-bold text-[#e0d8c3] hover:text-[#ffcc00]">Accomplishments</a>
+<body class="min-h-screen flex flex-col">
+  <header class="bg-transparent p-4 fade-in">
+    <h1 class="text-4xl font-bold text-center">Vybyn's Guide to Don't Starve Together</h1>
+    <nav class="mt-2 flex justify-center space-x-6">
+      <a href="index.html" class="text-xl hover:underline">Home</a>
+      <a href="https://steamcommunity.com/sharedfiles/filedetails?id=3435443161" class="text-xl hover:underline">Mods</a>
+      <a href="https://dontstarve.fandom.com/wiki/Don%27t_Starve_Together" class="text-xl hover:underline">Wiki</a>
+      <a href="goals.html" class="text-xl hover:underline">Goals</a>
+      <a href="accomplishments.html" class="text-xl hover:underline">Accomplishments</a>
       <a href="beefalo-taming.html" class="text-xl font-bold text-[#e0d8c3] hover:text-[#ffcc00]">Beefalo Taming</a>
-    </div>
-  </nav>
+    </nav>
+  </header>
 
   <div class="container mx-auto mt-8 px-4">
     <h1 class="section-title text-4xl font-bold text-center mb-6">Beefalo Taming Guide</h1>
 
     <div class="parchment p-6 mb-8 fade-in">
       <h2 class="text-2xl font-bold mb-4">Why Tame a Beefalo?</h2>
-      <p class="mb-4">Taming a Beefalo in <em>Don't Starve Together</em> provides three key benefits:</p>
+      <p>Taming a Beefalo makes *Don't Starve Together* easier with these perks:</p>
       <ul class="list-disc list-inside mb-4">
-        <li><strong>Speed</strong>: Move faster than a player, even with heavy objects.</li>
-        <li><strong>Infinite Weapon</strong>: Deal up to 68 damage per attack when fully tamed, matching a dark sword.</li>
-        <li><strong>Meat Shield</strong>: 1000 health, absorbs melee damage, regenerates 6.9 health every 10 seconds.</li>
+        <li><strong>Faster Travel</strong>: Move quicker, even with heavy items.</li>
+        <li><strong>Strong Attacks</strong>: Deal up to 68 damage, like a dark sword.</li>
+        <li><strong>Tough Shield</strong>: 1000 health, takes hits for you, heals 6.9 health every 10 seconds.</li>
+        <li><strong>Free Fuel</strong>: Manure for fire pits all year.</li>
       </ul>
-      <p>Plus, their manure fuels fire pits year-round! Taming takes 15–20 days but can be done alongside regular gameplay.</p>
+      <p>It takes 15–20 days, but you can tame while playing normally.</p>
     </div>
 
-   指標
-
-System: <div class="parchment p-6 mb-8 fade-in">
-      <h2 class="text-2xl font-bold mb-4">How to Tame a Beefalo</h2>
-      <p class="mb-4">Follow these steps to tame your Beefalo efficiently:</p>
+    <div class="parchment p-6 mb-8 fade-in">
+      <h2 class="text-2xl font-bold mb-4">How to Tame</h2>
+      <p>Simple steps to tame your Beefalo:</p>
       <ol class="list-decimal list-inside mb-4">
-        <li><strong>Find and Bond</strong>: Locate Beefalo in Savanna or Mandrake Forest biomes. Craft a <strong>Beefalo Bell</strong> at a Science Machine to bond, making the Beefalo follow you.</li>
-        <li><strong>Manage Stats</strong>:
+        <li><strong>Find One</strong>: Check Savanna or Mandrake Forest. Use a <strong>Beefalo Bell</strong> (crafted at a Science Machine) to bond.</li>
+        <li><strong>Feed Often</strong>: Feed to keep obedience above 50% for riding. Use petals or light bulbs (cheap) or steamed twigs (1 twig + 3 fillers in a crockpot).</li>
+        <li><strong>Ride or Feed</strong>: Ride or keep hunger above 0 to gain 5% domestication daily (20 days total). Brushing speeds it up to 15 days.</li>
+        <li><strong>Use a Salt Lick</strong>: Place a <strong>Salt Lick</strong> (2 boards + 4 nitre, Alchemy Engine) within 4m to pause domestication loss. At full durability, a Salt Lick can keep a Beefalo from losing domestication for approximately 15 days, at 16 uses per day with 240 durability.</li>
+        <li><strong>Pick a Type</strong>:
           <ul class="list-disc list-inside ml-6">
-            <li><strong>Obedience</strong>: Keep ≥50% to ride (feed to increase by 10%, decays over time or by 1% per hit).</li>
-            <li><strong>Domestication</strong>: Gain 5% daily by riding or keeping hunger >0 (20 days to 100%). Brushing speeds to 15 days.</li>
-            <li><strong>Tendency</strong>: Determines final stats (Rider: speed, Ornery: damage, Pudgy: sanity, Default: balanced).</li>
+            <li><strong>Rider</strong>: Fastest, great for travel.</li>
+            <li><strong>Ornery</strong>: High damage, good for fights.</li>
+            <li><strong>Pudgy</strong>: Boosts sanity, but slow.</li>
+            <li><strong>Default</strong>: Balanced, no special perks.</li>
           </ul>
         </li>
-        <li><strong>Feed Smart</strong>: Use <strong>steamed twigs</strong> (1 twig + 3 fillers in a crockpot) for 100 hunger. Avoid overfeeding (hunger >375 causes 1% domestication loss).</li>
       </ol>
+      <p>Tip: Don’t attack your Beefalo (loses 30% domestication) or overfeed (loses 1% if hunger exceeds 375).</p>
     </div>
 
     <div class="parchment p-6 mb-8 fade-in">
-      <h2 class="text-2xl font-bold mb-4">Gear and Equipment</h2>
-      <p class="mb-4">Enhance your Beefalo with these items:</p>
+      <h2 class="text-2xl font-bold mb-4">How to Force a Beefalo Type</h2>
+      <p>During taming, you can influence your Beefalo’s tendency to become Rider, Ornery, Pudgy, or Default by your actions:</p>
+      <ul class="list-disc list-inside mb-4">
+        <li><strong>Rider (Speed)</strong>: Ride the Beefalo as much as possible without fighting. Avoid combat to prioritize speed tendency. Use a Glossamer Saddle to reinforce this.</li>
+        <li><strong>Ornery (Combat)</strong>: Engage in combat while riding. Attack enemies to increase the combat tendency. Equip a War Saddle or Nightmare Saddle to boost this.</li>
+        <li><strong>Pudgy (Sanity)</strong>: Overfeed the Beefalo by keeping its hunger above 375 as often as possible. Use high-hunger foods like steamed twigs or crops. This increases the Pudgy tendency.</li>
+        <li><strong>Default (Balanced)</strong>: Avoid extreme actions. Feed and ride moderately without focusing on combat or overfeeding to maintain a balanced tendency.</li>
+      </ul>
+      <p>Tip: Check the Beefalo’s face periodically (e.g., smiley for Rider, angry for Ornery) to confirm the tendency. Adjust your actions if needed before full domestication.</p>
+    </div>
+
+    <div class="parchment p-6 mb-8 fade-in">
+      <h2 class="text-2xl font-bold mb-4">Gear to Use</h2>
+      <p>Boost your Beefalo with these:</p>
       <ul class="list-disc list-inside mb-4">
         <li><strong>Default Saddle</strong>: 40% speed boost.</li>
-        <li><strong>Glossamer Saddle</strong>: 55% speed boost (68 butterfly wings).</li>
-        <li><strong>War Saddle</strong>: 25% speed, +16 damage, combat saddle.</li>
-        <li><strong>Battle Saddle</strong> (Wigfrid): 30% speed, +5 damage, 40% damage reduction.</li>
-        <li><strong>Nightmare Saddle</strong>: 45% speed, +18 planar damage, 60% physical + 15 planar damage reduction.</li>
-        <li><strong>Beefalo Gloom Bell</strong>: Revives dead Beefalo (2-hour cooldown).</li>
-        <li><strong>Grooming Station</strong>: Keeps Beefalo stationary at base.</li>
-      </ul>
-    </div>
-
-    <div class="parchment p-6 mb-8 fade-in">
-      <h2 class="text-2xl font-bold mb-4">Practical Tips</h2>
-      <ul class="list-disc list-inside">
-        <li>Feed light bulbs/petals to boost obedience cheaply before riding.</li>
-        <li>Reset the buck timer by feeding while riding to avoid dismounts in danger.</li>
-        <li>In spring, trap Beefalo on a boat with steamed twigs or salt licks to avoid heat hostility.</li>
-        <li>Monitor tendency via the Beefalo’s face; use a punching bag for safe Ornery points.</li>
-        <li>Drop the Beefalo Bell far from bosses to prevent aggro.</li>
-        <li>Pair with characters like Wendy (damage boost) or Wormwood (poop for health).</li>
-        <li>Use a salt lick bug: Lick once, ride away, and domestication loss pauses until cave switch.</li>
+        <li><strong>Glossamer Saddle</strong>: 55% speed boost.</li>
+        <li><strong>War Saddle</strong>: +16 damage, mount in combat.</li>
+        <li><strong>Battle Saddle</strong> (Wigfrid): +5 damage, 40% less damage taken.</li>
+        <li><strong>Nightmare Saddle</strong>: +18 planar damage, 60% less damage taken.</li>
+        <li><strong>Gloom Bell</strong>: Revives dead Beefalo (2-hour cooldown).</li>
       </ul>
     </div>
 
