Added Beefalo Taming

--- a/accomplishments.html
+++ b/accomplishments.html
@@ -27,16 +27,28 @@
       <p class="text-xl mb-4">Tales of our victories!</p>
       <div class="space-y-6">
         <div class="parchment p-6 rounded-lg">
-          <h3 class="text-2xl font-bold">Survived 50 Days</h3>
-          <p class="text-lg">Endured 50 days of peril! Date: May 3, 2025</p>
+          <h3 class="text-2xl font-bold">Survived 200+ Days</h3>
+          <p class="text-lg">Endured 50 days of peril!</p>
         </div>
         <div class="parchment p-6 rounded-lg">
           <h3 class="text-2xl font-bold">Defeated Deerclops</h3>
-          <p class="text-lg">Vanquished the mighty Deerclops! Date: May 3, 2025</p>
+          <p class="text-lg">Vanquished the mighty Deerclops!</p>
         </div>
         <div class="parchment p-6 rounded-lg">
-          <h3 class="text-2xl font-bold">Conquered Autumn and Summer</h3>
-          <p class="text-lg">Mastered the challenges of Autumn and Summer! Date: May 3, 2025</p>
+          <h3 class="text-2xl font-bold">Conquered Seasons</h3>
+          <p class="text-lg">Mastered the challenges of Autumn, Winter, Spring and Summer!</p>
+        </div>
+        <div class="parchment p-6 rounded-lg">
+          <h3 class="text-2xl font-bold">Defeated Bee Queen</h3>
+          <p class="text-lg">Triumphed over the formidable Bee Queen!</p>
+        </div>
+        <div class="parchment p-6 rounded-lg">
+          <h3 class="text-2xl font-bold">Discovered Islands</h3>
+          <p class="text-lg">Found the Monkey, Lunar, and Pearl Islands!</p>
+        </div>
+        <div class="parchment p-6 rounded-lg">
+          <h3 class="text-2xl font-bold">Rushed Ruins and Created Celestial Portal</h3>
+          <p class="text-lg">Conquered the Ruins and forged the Celestial Portal!</p>
         </div>
       </div>
     </section>
